k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  labels:
    app: homepage
  annotations:
    kubernetes.io/change-cause: "Force update to refresh deployment"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
      - name: homepage
        image: kotahuskyacrshared.azurecr.io/homepage:latest
        ports:
        - containerPort: 3000
