k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: webapps
spec:
  selector:
    app: homepage
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
